wrap box-shadows in mixin in custom forms. fixes #17242

--- a/scss/_custom-forms.scss
+++ b/scss/_custom-forms.scss
@@ -146,7 +146,7 @@
   &:focus {
     border-color: #51a7e8;
     outline: none;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 5px rgba(81, 167, 232, 0.5);
+    @include box-shadow(inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 5px rgba(81, 167, 232, 0.5));
   }
 
   // Hides the default caret in IE11
@@ -197,7 +197,7 @@
   background-color: #fff;
   border: .075rem solid #ddd;
   border-radius: .25rem;
-  box-shadow: inset 0 .2rem .4rem rgba(0,0,0,.05);
+  @include box-shadow(inset 0 .2rem .4rem rgba(0,0,0,.05));
 }
 .file-custom:after {
   content: "Choose file...";
@@ -221,5 +221,5 @@
 
 // Focus state
 .file input:focus ~ .file-custom {
-  box-shadow: 0 0 0 .075rem #fff, 0 0 0 .2rem #0074d9;
+  @include box-shadow(0 0 0 .075rem #fff, 0 0 0 .2rem #0074d9);
 }
